--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,20 +32,25 @@ jobs:
         export enable_ccache=off
         wget https://github.com/aseprite/skia/releases/download/m102-861e4743af/Skia-Linux-Release-x64-libc++.zip
         7z x Skia-Linux-Release-x64-libc++.zip
-        cmake -S . -B build -G Ninja \
-          -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} \
-          -DENABLE_UI=${{ matrix.enable_ui }} \
-          -DENABLE_CCACHE=$enable_ccache \
+        mkdir build
+        cd build
+        export CC=clang
+        export CXX=clang++
+        cmake \
+          -DCMAKE_BUILD_TYPE=RelWithDebInfo \
+          -DCMAKE_CXX_FLAGS:STRING=-stdlib=libc++ \
+          -DCMAKE_EXE_LINKER_FLAGS:STRING=-stdlib=libc++ \
           -DLAF_BACKEND=skia \
-          -DSKIA_DIR=/home/administrator/Skia-Linux-Release-x64-libc++ \
-          -DSKIA_LIBRARY_DIR=/home/administrator/Skia-Linux-Release-x64-libc++/skia/out/Release-x64 \
-          -DSKIA_LIBRARY=/home/administrator/Skia-Linux-Release-x64-libc++/skia/out/Release-x64/skia.lib
+          -DSKIA_DIR=$HOME/deps/skia \
+          -DSKIA_LIBRARY_DIR=$HOME/Skia-Linux-Release-x64-libc++/out/Release-x64 \
+          -DSKIA_LIBRARY=$HOME/Skia-Linux-Release-x64-libc++/out/Release-x64/libskia.a \
+          -G Ninja \ ..
     - name: Compiling
       shell: bash
       run: |
-        cd build && ninja
+        cd build && ninja aseprite
     - uses: actions/upload-artifact@v3
       with:
         name: aseprite
         path: |
-          /home/administrator/Skia-Linux-Release-x64-libc++/aseprite/build/bin/aseprite
+          $HOME/Skia-Linux-Release-x64-libc++/aseprite/build/bin/aseprite
