--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,9 +41,9 @@ jobs:
           -DCMAKE_CXX_FLAGS:STRING=-stdlib=libc++ \
           -DCMAKE_EXE_LINKER_FLAGS:STRING=-stdlib=libc++ \
           -DLAF_BACKEND=skia \
-          -DSKIA_DIR=$HOME/deps/skia \
-          -DSKIA_LIBRARY_DIR=$HOME/Skia-Linux-Release-x64-libc++/out/Release-x64 \
-          -DSKIA_LIBRARY=$HOME/Skia-Linux-Release-x64-libc++/out/Release-x64/libskia.a \
+          -DSKIA_DIR=./Skia-Linux-Release-x64-libc++ \
+          -DSKIA_LIBRARY_DIR=./Skia-Linux-Release-x64-libc++/out/Release-x64 \
+          -DSKIA_LIBRARY=./Skia-Linux-Release-x64-libc++/out/Release-x64/libskia.a \
           -G Ninja \ ..
     - name: Compiling
       shell: bash
@@ -53,4 +53,4 @@ jobs:
       with:
         name: aseprite
         path: |
-          $HOME/Skia-Linux-Release-x64-libc++/aseprite/build/bin/aseprite
+          ./Skia-Linux-Release-x64-libc++/aseprite/build/bin/aseprite
