--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Generating Makefiles
       shell: bash
       run: |
-        sudo apt-get install -y g++ clang libc++-10-dev libc++abi-10-dev cmake ninja-build libx11-dev libxcursor-dev libxi-dev libgl1-mesa-dev libfontconfig1-dev
+        sudo apt-get install -y g++ clang libc++-dev libc++abi-dev cmake ninja-build libx11-dev libxcursor-dev libxi-dev libgl1-mesa-dev libfontconfig1-dev
         export enable_ccache=off
         curl -L https://github.com/aseprite/skia/releases/download/m102-861e4743af/Skia-Linux-Release-x64-libc++.zip --output skia.zip
         7z x -oskia skia.zip
@@ -38,12 +38,12 @@ jobs:
           -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} \
           -DENABLE_UI=${{ matrix.enable_ui }} \
           -DENABLE_CCACHE=$enable_ccache \
-          -DCMAKE_CXX_FLAGS=-stdlib=libc++
-          -DCMAKE_EXE_LINKER_FLAGS=-stdlib=libc++:
+          -DCMAKE_CXX_FLAGS=-stdlib=libc++ \
+          -DCMAKE_EXE_LINKER_FLAGS=-stdlib=libc++ \
           -DLAF_BACKEND=skia \
           -DSKIA_DIR=./skia \
           -DSKIA_LIBRARY_DIR=./skia/out/Release-x64 \
-          -DSKIA_LIBRARY=./skia/out/Release-x64/libskia.a
+          -DSKIA_LIBRARY=./skia/out/Release-x64/libskia.a \
         ls
     - name: Compiling
       shell: bash
